feat: implement delete image service
